--- a/Santa Cruz.html
+++ b/Santa Cruz.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>The Channel Islands National Park</h1>
+    <h1>The Channel Islands National Park -- Santa Cruz Island</h1>
     <main>
-    <p id="intro">This year (2019), on the 4th of July, I ventured out to the Channel Islands National Park. The Channel Islands is made up of 8 islands; 5 of which composed the National Park. In 1976, <strong>UNESCO</strong> designated the park as a biosphere reserve which insures the presevation and conservation of flora and fauna on the islands.</p>
+    <p id="intro">On the 4th of July (2019), I ventured out to Santa Cruz Island. Santa Cruz is one of the five islands that make up the Channel Islands National Park.
     <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.
       <ul id="list">
         <li>Oxnard to East Anacapa: 1-1.5 hrs (year round)</li>
