--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -77,13 +77,14 @@
   <ol>
 </section>
   <h3>Sources</h3>
-  <ul id="links">
+  <ul class="links">
     <li><a href="https://www.alltrails.com/parks/us/california/channel-islands-national-park">AllTrails</a></li>
     <li><a href="https://islandpackers.com/">Island Packers</a></li>
     <li><a href="https://www.nature.org/en-us/get-involved/how-to-help/places-we-protect/santa-cruz-island-california/">The Nature Conservancy</a></li>
     <li><a href="https://www.nps.gov/chis/planyourvisit/santa-cruz-island.htm">NPS</a></li>
     <li><a href="https://www.tripadvisor.com/Attraction_Review-g143019-d141863-Reviews-Santa_Cruz_Island-Channel_Islands_National_Park_California.html">Trip Advisor</a></li>
     <li><a href="https://www.visitcalifornia.com/attraction/santa-cruz-island">Visit California</a></li>
+  </ul>
   </main>
   </body>
 </html>
