--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>The Channel Islands National Park -- Santa Cruz Island</h1>
+    <h1>Santa Cruz Island</h1>
     <main>
     <p id="intro">On the 4th of July (2019), I ventured out to Santa Cruz Island. Santa Cruz is one of the five islands that make up the Channel Islands National Park.
       I've only learned about the islands a few days before and one for myself. What an adventure it was!
@@ -18,7 +18,7 @@
         <li>Ventura to San Miguel: 4-5 hrs (May thru October)</li>
         <li>Ventura to Santa Rosa: 2-2.5 hrs (March thru November)</li>
       </ul>
-     <p>The company has been transporting people since 1968. Island Packers, besides to/fro transportion, also offer wildlife tours around the islands daily as weather permits. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--reaching the Santa Cruz around 12:30PM. The last boat to leave the island is at 4:30PM, but that was also sold out. So 4PM it was; giving me about 3 hours to roam around. Three hours was enough time to do some hiking. This wasn't going to be my last trip to the island anyway. I will be back.</p>
+     <p>The company has been transporting people since 1968. Island Packers, besides to/fro transportation, also offers wildlife tours around the islands daily as weather permits. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--reaching the Santa Cruz around 12:30PM. The last boat to leave the island is at 4:30PM, but that was also sold out. So 4PM it was; giving me about 3 hours to roam around. Three hours was enough time to do some hiking. This wasn't going to be my last trip to the island anyway. I will be back.</p>
     <p>Day trippers and overnighters/campers braved the hour boat ride in the choppy Pacific Ocean. We encountered young sea lions chilling on a red buoy and massive ships journeying through Separation Zone. The captain likened the Separation Zone to a freeway for ships.  It was particularly interesting to see the Disney Cruise Ship towering over the Hyundai cargo ship nearby. The cruise ship truly looked like a skyscraper hovering on top of the ocean!</p>
     <img src="https://sanctuaries.noaa.gov/science/sentinel-site-program/channel-islands/CINMS_SS.jpg" alt="Separation Zone" width="500" class="zone">
     <hr>
@@ -37,8 +37,9 @@
     <p>In 2005, both the Nature Conservancy and NPS embarked on a controversial action to eradicate feral pigs. The NPS already had its share of protesters 4 years prior when it eradicated black rats from Anacapa Island. The black rats were believed to have arrived on the island as stowaways on ships before 1940. The rats proved to be an invasive species that did not only threaten birds but also preyed on Anacapa's deer mouse population. The process of eradication was air dropping poisonous green pellets which killed the rats over a period of 3 days. This moved sparked protests from animal rights activists and debate on the very notion of "native" species.</p>
     <p>The next step was the eradication of feral pigs. The pigs had been in Santa Cruz as early as 1850s. Starting with less than 100 pigs, the population grew to about <a href="https://www.latimes.com/archives/la-xpm-2002-jul-28-me-bones28-story.html">LA Times</a> 4,000 in 2005, threatening the lives of native species including the island foxes and Chumash archaeological sites. "After 150 years, officials claim, there is an urgent need to eradicate pigs, because they are said to trample island vegetation and dig up Chumash Indian grave sites." (<a href="https://www.sfgate.com/green/article/Pig-eradication-plan-out-of-control-2668922.php">SFGATE</a>). The means to this end was to hunt/shoot the pigs. The entire operation took 2 years. This action also faced heavy criticisms from animal rights activists, but conservationists won grounds in court.</p>
     <p>As a result of these measures, we now have the privilege of stepping into wild California; as if untouched by humans.</p>
+    <hr>
     <h2>Island Fox</h2>
-    <p>I vowed to see at least one island fox on this trip. These island foxes are found in 3 islands in the Channel Islands National Park). Scientifically referred to as <em>urocyon littoralis</em>, variations of the subspecies are endemic in each islan due to their prolonged isolationi from mainland gray foxes. One notable of these unique features is their size. Island foxes are miniatures compared to mainland foxes. They grow up to <a href="https://www.nps.gov/chis/learn/nature/island-fox.htm">12-13 inches tall and only weigh 4-5 lbs</a>. These foxes are not found anywhere else in the world.
+    <p>I vowed to see at least one island fox on this trip. Endemic island foxes are found in 3 of the islands in the Channel Islands National Park). Scientifically referred to as <em>urocyon littoralis</em>, variations of the subspecies are endemic in each islan due to their prolonged isolationi from mainland gray foxes. One notable of these unique features is their size. Island foxes are miniatures compared to mainland foxes. They grow up to <a href="https://www.nps.gov/chis/learn/nature/island-fox.htm">12-13 inches tall and only weigh 4-5 lbs</a>. These foxes are not found anywhere else in the world.
     <ul>
       <li>Urocyon littoralis littoralis of San Miguel Island</li>
       <li>Urocyon littoralis santarosae of Santa Rosa Island</li>
@@ -53,6 +54,7 @@
       <img src="images/SantaCruz4.jpg" alt="Santa Cruz fox" width="640">
       <figcaption>Urocyon littoralis santacruzae at Scorpion Ranch</figcaption>
     </figure>
+  <hr>
   <h2>Potato Harbor Overlook</h2>
   <p>Due to time constraints, I was only able to do one hike. There are several hiking trails on Santa Cruz, ranging from easy to hard. I chose an easy trail with an incredible vista at the end. The Potato Harbor Trail is a 5-mile loop with 603 feet elevation (<a href="https://www.alltrails.com/trail/us/california/potato-harbor-trail">All Trails</a>). There were no shady areas. Good thing, I had a hat! On the way to Potato Harbor is another trail leading to Cavern Point Loop.</p>
   <figure>
@@ -61,7 +63,7 @@
   </figure>
   <p>There were at least 5 other people on the trail so it wasn't too lonely of a hike. When we all finally got there, 3 people were already standing on the edge of the cliff, taking in the view. And really, who can blame them when the view is this..</p>
   <img src="images/SantaCruz7.jpg" alt="Potato Harbor" width="760">
-<section id="tips">
+ <hr id="tips">
   <h3>Tips</h3>
   Santa Cruz Island offers an amazing experience to everyone. But because of its isolation and history, visitors have to be mindful of the following:
   <ol>
@@ -75,7 +77,7 @@
     <li>What comes with you, goes with you. All trash must be taken back to the mainland.</li>
     <li>Daytrippers, don't miss the last boat or you will be sleeping among the stars.</li>
   <ol>
-</section>
+
   <h3>Sources</h3>
   <ul class="links">
     <li><a href="https://www.alltrails.com/parks/us/california/channel-islands-national-park">AllTrails</a></li>
