--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Santa Cruz Island</h1>
+    <h1>The Channel Islands National Park--Santa Cruz Island</h1>
     <main>
     <p id="intro">On the 4th of July (2019), I ventured out to Santa Cruz Island. Santa Cruz is one of the five islands that make up the Channel Islands National Park.
-      I've only learned about the islands a few days before and one for myself. What an adventure it was!
+      I've only learned about the islands a few days before and had to see at least one myself. And what an adventure it was!
     <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.
       <ul class="list">
         <li>Oxnard to East Anacapa: 1-1.5 hrs (year round)</li>
@@ -40,7 +40,7 @@
     <hr>
     <h2>Island Fox</h2>
     <p>I vowed to see at least one island fox on this trip. Endemic island foxes are found in 3 of the islands in the Channel Islands National Park). Scientifically referred to as <em>urocyon littoralis</em>, variations of the subspecies are endemic in each islan due to their prolonged isolationi from mainland gray foxes. One notable of these unique features is their size. Island foxes are miniatures compared to mainland foxes. They grow up to <a href="https://www.nps.gov/chis/learn/nature/island-fox.htm">12-13 inches tall and only weigh 4-5 lbs</a>. These foxes are not found anywhere else in the world.
-    <ul>
+    <ul id="fox">
       <li>Urocyon littoralis littoralis of San Miguel Island</li>
       <li>Urocyon littoralis santarosae of Santa Rosa Island</li>
       <li>Urocyon littoralis santacruzae of Santa Cruz Island</li>
@@ -66,7 +66,7 @@
  <hr id="tips">
   <h3>Tips</h3>
   Santa Cruz Island offers an amazing experience to everyone. But because of its isolation and history, visitors have to be mindful of the following:
-  <ol>
+  <ol class="list">
     <li>Make sure you are not bringing any animals to the island, conciously or unconsciously. Clean your shoes and other belongings before disembarking.</li>
     <li>Remember that island foxes are still wild even when they look friendly.</li>
     <li>There is no food for sale on the island so bring enough for the day.</li>
@@ -76,17 +76,10 @@
     <li>Do not get injured! 911 is going to take a while to get to the island.</li>
     <li>What comes with you, goes with you. All trash must be taken back to the mainland.</li>
     <li>Daytrippers, don't miss the last boat or you will be sleeping among the stars.</li>
-  <ol>
-
+  </ol>
+  <hr>
   <h3>Sources</h3>
-  <ul class="links">
-    <li><a href="https://www.alltrails.com/parks/us/california/channel-islands-national-park">AllTrails</a></li>
-    <li><a href="https://islandpackers.com/">Island Packers</a></li>
-    <li><a href="https://www.nature.org/en-us/get-involved/how-to-help/places-we-protect/santa-cruz-island-california/">The Nature Conservancy</a></li>
-    <li><a href="https://www.nps.gov/chis/planyourvisit/santa-cruz-island.htm">NPS</a></li>
-    <li><a href="https://www.tripadvisor.com/Attraction_Review-g143019-d141863-Reviews-Santa_Cruz_Island-Channel_Islands_National_Park_California.html">Trip Advisor</a></li>
-    <li><a href="https://www.visitcalifornia.com/attraction/santa-cruz-island">Visit California</a></li>
-  </ul>
+    <a href="https://www.alltrails.com/parks/us/california/channel-islands-national-park">AllTrails</a> | <a href="https://islandpackers.com/">Island Packers</a> | <a href="https://www.nature.org/en-us/get-involved/how-to-help/places-we-protect/santa-cruz-island-california/">The Nature Conservancy</a> | <a href="https://www.nps.gov/chis/planyourvisit/santa-cruz-island.htm">NPS</a> | <a href="https://www.tripadvisor.com/Attraction_Review-g143019-d141863-Reviews-Santa_Cruz_Island-Channel_Islands_National_Park_California.html">Trip Advisor</a> | <a href="https://www.visitcalifornia.com/attraction/santa-cruz-island">Visit California</a>
   </main>
   </body>
 </html>
