--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -8,9 +8,8 @@
   <body>
     <h1>The Channel Islands National Park--Santa Cruz Island</h1>
     <main>
-    <p id="intro">On the 4th of July (2019), I ventured out to Santa Cruz Island. Santa Cruz is one of the five islands that make up the Channel Islands National Park.
-      I've only learned about the islands a few days before and had to see at least one myself. And what an adventure it was!
-    <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.
+    <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the islands a few days before and had to see at least one myself. To Santa Cruz, I went, on the 4th of July (2019). And what an adventure it was!</p>
+    <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.</p>
       <ul class="list">
         <li>Oxnard to East Anacapa: 1-1.5 hrs (year round)</li>
         <li>Ventura to Prisoners Harbor: 1-1.5 hrs (year round)</li>
