--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -8,7 +8,7 @@
   <body>
     <h1>The Channel Islands National Park--Santa Cruz Island</h1>
     <main>
-    <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the islands a few days before and had to see at least one myself. To Santa Cruz, I went, on the 4th of July (2019). And what an adventure it was!</p>
+    <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the islands a few days before and had to see at least one myself. To Santa Cruz I went--on the 4th of July (2019).</p>
     <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.</p>
       <ul class="list">
         <li>Oxnard to East Anacapa: 1-1.5 hrs (year round)</li>
@@ -17,19 +17,19 @@
         <li>Ventura to San Miguel: 4-5 hrs (May thru October)</li>
         <li>Ventura to Santa Rosa: 2-2.5 hrs (March thru November)</li>
       </ul>
-     <p>The company has been transporting people since 1968. Island Packers, besides to/fro transportation, also offers wildlife tours around the islands daily as weather permits. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--reaching the Santa Cruz around 12:30PM. The last boat to leave the island is at 4:30PM, but that was also sold out. So 4PM it was; giving me about 3 hours to roam around. Three hours was enough time to do some hiking. This wasn't going to be my last trip to the island anyway. I will be back.</p>
-    <p>Day trippers and overnighters/campers braved the hour boat ride in the choppy Pacific Ocean. We encountered young sea lions chilling on a red buoy and massive ships journeying through Separation Zone. The captain likened the Separation Zone to a freeway for ships.  It was particularly interesting to see the Disney Cruise Ship towering over the Hyundai cargo ship nearby. The cruise ship truly looked like a skyscraper hovering on top of the ocean!</p>
+     <p>The company has been transporting people since 1968. Island Packers, besides to/fro transportation, also offers wildlife tours around the islands daily. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few days before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--arriving in Santa Cruz around 12:30PM. The last boat to leave the island is 4:30PM, but that was also sold out. I had to book the 4PM, which gave me about 3 hours to explore, which was ok. This wasn't going to be my last trip to the island anyway. I will be back.</p>
+    <p>Day trippers and overnighters/campers braved the hour boat ride in the choppy Pacific Ocean. We encountered young sea lions chilling on a red buoy and massive ships journeying through Separation Zone. The Separation Zone is like a freeway for vessels. It is a regulated area where ships have to stay in their lane to prevent collisions especially in highly trafficked waters. It was particularly interesting to see the Disney Cruise Ship towering over the Hyundai cargo ship nearby. The cruise ship truly looked like a skyscraper hovering on top of the ocean!</p>
     <img src="https://sanctuaries.noaa.gov/science/sentinel-site-program/channel-islands/CINMS_SS.jpg" alt="Separation Zone" width="500" class="zone">
     <hr>
     <h2>Scorpion Anchorage</h2>
-    <p>After an hour on the ocean, we passed the smallest island, Anacapa. The island looked so bare but with lots of birds hovering around it. We knew we were about to encounter wild California. Beyond the horizon is the silhouette of the biggest island, Santa Cruz. Santa Cruz dwarfs Anacapa. Twenty minutes later, we docked at Scorpion Anchorage, located in the eastern part of Santa Cruz. The water below the dock was crystal clear. Luscious kelp forests swayed as small waves rushed into the shore. Day trippers disembarked first, grouped together, and were given a brief orientation from a park ranger. There were kayakers getting ready for their adventures into the series of caves that wrapped around the eastern part of the island. There were a few blankets on the rocky bay of onlookers and there was a family of 4 getting ready to snorkel. It was a sight unlike any in California. Well, maybe except for Catalina.</p>
+    <p>After an hour on the ocean, we passed the smallest island, Anacapa. The island looked so bare but with lots of birds hovering around it. We knew we were about to encounter "wild" California. Beyond the horizon was the silhouette of the biggest island, Santa Cruz. Twenty minutes later, we docked at Scorpion Anchorage, located in the eastern part of Santa Cruz. The water below the dock was crystal clear. Luscious kelp forests swayed as small waves rushed into the shore. Day trippers disembarked first, grouped together, and were given a brief orientation from a park ranger. There were kayakers getting ready for their adventures into the series of caves that wrapped around the eastern part of the island. There were a few blankets on the rocky bay of onlookers and there was a family of 4 getting ready to snorkel. It was a sight unlike any in California. Well, maybe except for Catalina.</p>
     <figure>
-      <img src="images/SantaCruz1.jpg" alt="Scorpion Anchorage bay" width="640">
+      <img src="images/SantaCruz1.jpg" alt="Scorpion Anchorage bay" width="500">
       <figcaption>Scorpion Anchorage</figcaption>
     </figure>
     <p>The ranger accompanied us to the orientation area where we found remnants of a ranch. Santa Cruz went through series of sheep and  cattle ranches from 1869 to ~1984.</p>
     <figure>
-      <img src="images/SantaCruz3.jpg" alt="Gotfredson Truck" width="640">
+      <img src="images/SantaCruz3.jpg" alt="Gotfredson Truck" width="500">
       <figcaption>One of the rusted machineries/vehicles at the Scorpion Ranch properties.</figcaption>
     </figure>
     <p>The National Park Services (NPS) acquired 25% of the island from the Gherini family. <a href="https://www.nature.org/en-us/about-us/where-we-work/united-states/california/stories-in-california/santa-cruz-island-anniversary/">The Nature Conservancy</a> purchased the remaining 75% in 1978 and eliminated the remaining cattle industry.</p>
@@ -50,18 +50,18 @@
     Source: <a href="https://en.wikipedia.org/wiki/Island_fox">Island Fox in Wikpedia</a>
     <p>Upon reaching the ranch area, I didn't have to look far. Other day trippers who were having their lunch on tables next to the ranch house were pointing to the rustling of grass and low-lying foliage. We looked down and there were 2 foxes playing. They were not shy or afraid of people. They would even come closer to you if you have food!</p>
     <figure>
-      <img src="images/SantaCruz4.jpg" alt="Santa Cruz fox" width="640">
+      <img src="images/SantaCruz4.jpg" alt="Santa Cruz fox" width="500">
       <figcaption>Urocyon littoralis santacruzae at Scorpion Ranch</figcaption>
     </figure>
   <hr>
   <h2>Potato Harbor Overlook</h2>
   <p>Due to time constraints, I was only able to do one hike. There are several hiking trails on Santa Cruz, ranging from easy to hard. I chose an easy trail with an incredible vista at the end. The Potato Harbor Trail is a 5-mile loop with 603 feet elevation (<a href="https://www.alltrails.com/trail/us/california/potato-harbor-trail">All Trails</a>). There were no shady areas. Good thing, I had a hat! On the way to Potato Harbor is another trail leading to Cavern Point Loop.</p>
   <figure>
-    <img src="images/SantaCruz6.jpg" alt="Cavern Point Loop" width="760">
+    <img src="images/SantaCruz6.jpg" alt="Cavern Point Loop" width="500">
     <figcaption>Cavern Point Loop</figcaption>
   </figure>
   <p>There were at least 5 other people on the trail so it wasn't too lonely of a hike. When we all finally got there, 3 people were already standing on the edge of the cliff, taking in the view. And really, who can blame them when the view is this..</p>
-  <img src="images/SantaCruz7.jpg" alt="Potato Harbor" width="760">
+  <img src="images/SantaCruz7.jpg" alt="Potato Harbor" width="500">
  <hr id="tips">
   <h3>Tips</h3>
   Santa Cruz Island offers an amazing experience to everyone. But because of its isolation and history, visitors have to be mindful of the following:
