--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>The Channel Islands National Park--Santa Cruz Island</h1>
+    <h1>Santa Cruz Island</h1>
     <main>
     <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the islands a few days before and had to see at least one myself. To Santa Cruz I went--on the 4th of July (2019).</p>
     <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.</p>
