--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -10,15 +10,17 @@
     <main>
     <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the islands a few days before and had to see at least one myself. To Santa Cruz I went--on the 4th of July (2019).</p>
     <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.</p>
-      <ul class="list">
-        <li>Oxnard to East Anacapa: 1-1.5 hrs (year round)</li>
-        <li>Ventura to Prisoners Harbor: 1-1.5 hrs (year round)</li>
-        <li>Ventura to Scorpion Anchorage: 1-1.5 hrs (year round)</li>
-        <li>Ventura to San Miguel: 4-5 hrs (May thru October)</li>
-        <li>Ventura to Santa Rosa: 2-2.5 hrs (March thru November)</li>
-      </ul>
      <p>The company has been transporting people since 1968. Island Packers, besides to/fro transportation, also offers wildlife tours around the islands daily. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few days before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--arriving in Santa Cruz around 12:30PM. The last boat to leave the island is 4:30PM, but that was also sold out. I had to book the 4PM, which gave me about 3 hours to explore, which was ok. This wasn't going to be my last trip to the island anyway. I will be back.</p>
     <p>Day trippers and overnighters/campers braved the hour boat ride in the choppy Pacific Ocean. We encountered young sea lions chilling on a red buoy and massive ships journeying through Separation Zone. The Separation Zone is like a freeway for vessels. It is a regulated area where ships have to stay in their lane to prevent collisions especially in highly trafficked waters. It was particularly interesting to see the Disney Cruise Ship towering over the Hyundai cargo ship nearby. The cruise ship truly looked like a skyscraper hovering on top of the ocean!</p>
+     <aside>
+      <ul>
+      <li>Oxnard to East Anacapa: 1-1.5 hrs (year round)</li>
+      <li>Ventura to Prisoners Harbor: 1-1.5 hrs (year round)</li>
+      <li>Ventura to Scorpion Anchorage: 1-1.5 hrs (year round)</li>
+      <li>Ventura to San Miguel: 4-5 hrs (May thru October)</li>
+      <li>Ventura to Santa Rosa: 2-2.5 hrs (March thru November)</li>
+      </ul>
+    </aside>
     <img src="https://sanctuaries.noaa.gov/science/sentinel-site-program/channel-islands/CINMS_SS.jpg" alt="Separation Zone" width="500" class="images">
     <hr>
     <h2>Scorpion Anchorage</h2>
@@ -65,7 +67,7 @@
  <hr id="tips">
   <h3>Tips</h3>
   Santa Cruz Island offers an amazing experience to everyone. But because of its isolation and history, visitors have to be mindful of the following:
-  <ol class="list">
+  <ol id="list">
     <li>Make sure you are not bringing any animals to the island, conciously or unconsciously. Clean your shoes and other belongings before disembarking.</li>
     <li>Remember that island foxes are still wild even when they look friendly.</li>
     <li>There is no food for sale on the island so bring enough for the day.</li>
