--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
     <h1>Santa Cruz Island</h1>
-    <main>
     <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the islands a few days before and had to see at least one myself. To Santa Cruz I went--on the 4th of July (2019).</p>
+    </header>
+    <main>
     <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.</p>
      <p>The company has been transporting people since 1968. Island Packers, besides to/fro transportation, also offers wildlife tours around the islands daily. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few days before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--arriving in Santa Cruz around 12:30PM. The last boat to leave the island is 4:30PM, but that was also sold out. I had to book the 4PM, which gave me about 3 hours to explore, which was ok. This wasn't going to be my last trip to the island anyway. I will be back.</p>
     <p>Day trippers and overnighters/campers braved the hour boat ride in the choppy Pacific Ocean. We encountered young sea lions chilling on a red buoy and massive ships journeying through Separation Zone. The Separation Zone is like a freeway for vessels. It is a regulated area where ships have to stay in their lane to prevent collisions especially in highly trafficked waters. It was particularly interesting to see the Disney Cruise Ship towering over the Hyundai cargo ship nearby. The cruise ship truly looked like a skyscraper hovering on top of the ocean!</p>
@@ -75,8 +77,10 @@
     <li>What comes with you, goes with you. All trash must be taken back to the mainland.</li>
     <li>Daytrippers, don't miss the last boat or you will be sleeping among the stars.</li>
   </ol>
+  </main>
+  <footer>    
   <h3>Sources</h3>
     <a href="https://www.alltrails.com/parks/us/california/channel-islands-national-park">AllTrails</a> | <a href="https://islandpackers.com/">Island Packers</a> | <a href="https://www.nature.org/en-us/get-involved/how-to-help/places-we-protect/santa-cruz-island-california/">The Nature Conservancy</a> | <a href="https://www.nps.gov/chis/planyourvisit/santa-cruz-island.htm">NPS</a> | <a href="https://www.tripadvisor.com/Attraction_Review-g143019-d141863-Reviews-Santa_Cruz_Island-Channel_Islands_National_Park_California.html">Trip Advisor</a> | <a href="https://www.visitcalifornia.com/attraction/santa-cruz-island">Visit California</a>
-  </main>
+    </footer>
   </body>
 </html>
