--- a/SantaCruz.html
+++ b/SantaCruz.html
@@ -8,12 +8,12 @@
   <body>
     <header>
     <h1>Santa Cruz Island</h1>
-    <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the islands a few days before and had to see at least one myself. To Santa Cruz I went--on the 4th of July (2019).</p>
+    <p id="intro">Santa Cruz is one of the five islands that make up the Channel Islands National Park. I've only learned about the park earlier this year and had to see at least one myself. So, to Santa Cruz I went--on the 4th of July (2019).</p>
     </header>
     <main>
     <p id="boatride">The only way to visit the island, unless one has a boat, is booking through <a href="https://www.islandpackers.com">Island Packers</a>.</p>
-     <p>The company has been transporting people since 1968. Island Packers, besides to/fro transportation, also offers wildlife tours around the islands daily. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few days before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--arriving in Santa Cruz around 12:30PM. The last boat to leave the island is 4:30PM, but that was also sold out. I had to book the 4PM, which gave me about 3 hours to explore, which was ok. This wasn't going to be my last trip to the island anyway. I will be back.</p>
-    <p>Day trippers and overnighters/campers braved the hour boat ride in the choppy Pacific Ocean. We encountered young sea lions chilling on a red buoy and massive ships journeying through Separation Zone. The Separation Zone is like a freeway for vessels. It is a regulated area where ships have to stay in their lane to prevent collisions especially in highly trafficked waters. It was particularly interesting to see the Disney Cruise Ship towering over the Hyundai cargo ship nearby. The cruise ship truly looked like a skyscraper hovering on top of the ocean!</p>
+     <p>The company has been transporting people since 1968. Besides to/fro transportation, Island Packers also offers wildlife tours around the islands daily. That being said, early reservation is pertinent. I booked the trip to Santa Cruz a few days before the 4th and morning rides were already sold out. The earliest departure I could find was 11AM--arriving in Santa Cruz around 12:30PM. The last boat to leave the island is 4:30PM, but that was also sold out. I had to book the 4PM, which gave me about 3 hours to explore. This was ok. This wasn't going to be my last trip to the island anyway.</p>
+    <p>Day trippers and overnighters/campers braved the hour boat ride in the choppy Pacific Ocean. We encountered young sea lions chilling on a red buoy and massive ships journeying through the Separation Zone. The Separation Zone is like a freeway for vessels. It is a regulated area where ships have to stay in their lane to prevent collisions especially in highly trafficked waters. It was particularly interesting to see the Disney Cruise Ship towering over the Hyundai cargo ship nearby. The cruise ship truly looked like a skyscraper hovering on top of the ocean!</p>
      <aside>
       <ul>
       <li>Oxnard to East Anacapa: 1-1.5 hrs (year round)</li>
@@ -25,22 +25,22 @@
     </aside>
     <img src="https://sanctuaries.noaa.gov/science/sentinel-site-program/channel-islands/CINMS_SS.jpg" alt="Separation Zone" width="500" class="images">
     <h2>Scorpion Anchorage</h2>
-    <p>After an hour on the ocean, we passed the smallest island, Anacapa. The island looked so bare but with lots of birds hovering around it. We knew we were about to encounter "wild" California. Beyond the horizon was the silhouette of the biggest island, Santa Cruz. Twenty minutes later, we docked at Scorpion Anchorage, located in the eastern part of Santa Cruz. The water below the dock was crystal clear. Luscious kelp forests swayed as small waves rushed into the shore. Day trippers disembarked first, grouped together, and were given a brief orientation from a park ranger. There were kayakers getting ready for their adventures into the series of caves that wrapped around the eastern part of the island. There were a few blankets on the rocky bay of onlookers and there was a family of 4 getting ready to snorkel. It was a sight unlike any in California. Well, maybe except for Catalina.</p>
-    <figure>
+    <p>After an hour on the ocean, we passed by the smallest island, Anacapa. The island looked bare but with lots of birds hovering around it. We knew we were about to encounter "wild" California. Beyond the horizon was Santa Cruz, the biggest island. We docked in Scorpion Anchorage, located in the eastern part of Santa Cruz. The water below the dock was crystal clear! We can clearly see the luscious kelp forests as they swayed with the waves.</p>
+      <p>Day trippers disembarked first; grouped together; and were given a brief orientation by a park ranger. While the orientation was going on, Scorpion shore had kayakers getting ready to explore the series of caves in the eastern part of the island. There were a few blankets on the bay of onlookers and there was a family of four getting ready to snorkel. It was a sight unlike any in California. Well, maybe except for Catalina.</p>
+      <figure>
       <img src="images/SantaCruz1.jpg" alt="Scorpion Anchorage bay" width="500">
       <figcaption>Scorpion Anchorage</figcaption>
     </figure>
-    <p>The ranger accompanied us to the orientation area where we found remnants of a ranch. Santa Cruz went through series of sheep and  cattle ranches from 1869 to ~1984.</p>
+    <p>The ranger accompanied us to the historic ranch area where a couple of houses are still standing. Santa Cruz went through series of sheep and  cattle ranches from 1869 to ~1984.</p>
     <figure>
       <img src="images/SantaCruz3.jpg" alt="Gotfredson Truck" width="500">
       <figcaption>One of the rusted machineries/vehicles at the Scorpion Ranch properties.</figcaption>
     </figure>
     <p>The National Park Services (NPS) acquired 25% of the island from the Gherini family. <a href="https://www.nature.org/en-us/about-us/where-we-work/united-states/california/stories-in-california/santa-cruz-island-anniversary/">The Nature Conservancy</a> purchased the remaining 75% in 1978 and eliminated the remaining cattle industry.</p>
-    <p>In 2005, both the Nature Conservancy and NPS embarked on a controversial action to eradicate feral pigs. The NPS already had its share of protesters 4 years prior when it eradicated black rats from Anacapa Island. The black rats were believed to have arrived on the island as stowaways on ships before 1940. The rats proved to be an invasive species that did not only threaten birds but also preyed on Anacapa's deer mouse population. The process of eradication was air dropping poisonous green pellets which killed the rats over a period of 3 days. This moved sparked protests from animal rights activists and debate on the very notion of "native" species.</p>
-    <p>The next step was the eradication of feral pigs. The pigs had been in Santa Cruz as early as 1850s. Starting with less than 100 pigs, the population grew to about <a href="https://www.latimes.com/archives/la-xpm-2002-jul-28-me-bones28-story.html">LA Times</a> 4,000 in 2005, threatening the lives of native species including the island foxes and Chumash archaeological sites. "After 150 years, officials claim, there is an urgent need to eradicate pigs, because they are said to trample island vegetation and dig up Chumash Indian grave sites." (<a href="https://www.sfgate.com/green/article/Pig-eradication-plan-out-of-control-2668922.php">SFGATE</a>). The means to this end was to hunt/shoot the pigs. The entire operation took 2 years. This action also faced heavy criticisms from animal rights activists, but conservationists won grounds in court.</p>
-    <p>As a result of these measures, we now have the privilege of stepping into wild California; as if untouched by humans.</p>
+    <p>In 2005, both the Nature Conservancy and NPS embarked on a controversial action to eradicate feral pigs. NPS already had its share of protesters four years prior when it eradicated black rats from Anacapa. The black rats were believed to have arrived on the island as stowaways on ships before 1940 and, since then, proved to be invasive species that threatened birds and Anacapa's deer mouse population. The process of eradication was air dropping poisonous green pellets which killed the rats over a  ~three days. This moved sparked protests from animal rights activists and debate on the very notion of "native" species. But process went through and Anacapa was restored to its "original state."</p>
+    <p>The next step was the eradication of feral pigs on Santa Cruz. The pigs had been there since the 185s. Starting with less than 100 pigs, the population grew to about <a href="https://www.latimes.com/archives/la-xpm-2002-jul-28-me-bones28-story.html">LA Times</a> 4,000 in 2005. Like the rats, the pigs threatened the lives of native species, e.g. the island foxes, and Chumash archaeological sites. "After 150 years, officials claim, there is an urgent need to eradicate pigs, because they are said to trample island vegetation and dig up Chumash Indian grave sites." (<a href="https://www.sfgate.com/green/article/Pig-eradication-plan-out-of-control-2668922.php">SFGATE</a>). The means to this end was to hunt/shoot the pigs. This action also faced heavy criticisms from animal rights activists, but the courts sided with the conservators. The operation took two years. Since then, Santa Cruz has been freed from non-native specied. And as a result of these measures, we now have the privilege of stepping into wild California; as if untouched by humans.</p>
     <h2>Island Fox</h2>
-    <p>I vowed to see at least one island fox on this trip. Endemic island foxes are found in 3 of the islands in the Channel Islands National Park). Scientifically referred to as <em>urocyon littoralis</em>, variations of the subspecies are endemic in each islan due to their prolonged isolationi from mainland gray foxes. One notable of these unique features is their size. Island foxes are miniatures compared to mainland foxes. They grow up to <a href="https://www.nps.gov/chis/learn/nature/island-fox.htm">12-13 inches tall and only weigh 4-5 lbs</a>. These foxes are not found anywhere else in the world.
+    <p>I vowed to see at least one island fox on this trip. Endemic island foxes are found in three of the 5 islands in the Channel Islands National Park. Scientifically referred to as <em>urocyon littoralis</em>, variations of the subspecies are endemic in each islan due to their prolonged isolationi from mainland gray foxes. One notable of these unique features is their size. Island foxes are miniatures compared to mainland foxes. They grow up to <a href="https://www.nps.gov/chis/learn/nature/island-fox.htm">12-13 inches tall and only weigh 4-5 lbs</a>. These foxes are not found anywhere else in the world.
     <ul id="fox">
       <li>Urocyon littoralis littoralis of San Miguel Island</li>
       <li>Urocyon littoralis santarosae of Santa Rosa Island</li>
@@ -50,7 +50,7 @@
       <li>Urocyon littoralis clementae of San Clemente Island</li>
     </ul>
     Source: <a href="https://en.wikipedia.org/wiki/Island_fox">Island Fox in Wikpedia</a>
-    <p>Upon reaching the ranch area, I didn't have to look far. Other day trippers who were having their lunch on tables next to the ranch house were pointing to the rustling of grass and low-lying foliage. We looked down and there were 2 foxes playing. They were not shy or afraid of people. They would even come closer to you if you have food!</p>
+    <p>Upon reaching the ranch area, I didn't have to look far. Other day trippers who were having their lunch at the tables next to the ranch house were pointing at the rustling of low-lying foliage. We looked down and there were two island foxes playing. They were not shy or afraid of people. They would even come closer to you if you have food!</p>
     <figure>
       <img src="images/SantaCruz4.jpg" alt="Santa Cruz fox" width="500">
       <figcaption>Urocyon littoralis santacruzae at Scorpion Ranch</figcaption>
@@ -61,25 +61,24 @@
     <img src="images/SantaCruz6.jpg" alt="Cavern Point Loop" width="500">
     <figcaption>Cavern Point Loop</figcaption>
   </figure>
-  <p>There were at least 5 other people on the trail so it wasn't too lonely of a hike. When we all finally got there, 3 people were already standing on the edge of the cliff, taking in the view. And really, who can blame them when the view is this..</p>
+  <p>There were at least five other people on the trail so it wasn't too lonely of a hike. When we all finally got there, three people were already standing at the edge of the cliff, taking in the view. And really, who can blame them when the view is this..</p>
   <img src="images/SantaCruz7.jpg" alt="Potato Harbor" width="500">
   <h3>Tips</h3>
   Santa Cruz Island offers an amazing experience to everyone. But because of its isolation and history, visitors have to be mindful of the following:
   <ol id="list">
     <li>Make sure you are not bringing any animals to the island, conciously or unconsciously. Clean your shoes and other belongings before disembarking.</li>
-    <li>Remember that island foxes are still wild even when they look friendly.</li>
+    <li>Remember that island foxes are still wild even when though they look friendly.</li>
     <li>There is no food for sale on the island so bring enough for the day.</li>
-    <li>Potable water is only available on the Scorpion Ranch area.</li>
-    <li>There is no electricity so charge all your gadgets before going.</li>
+    <li>Potable water is only available at the Scorpion Ranch area.</li>
+    <li>There is no electricity, so charge all your gadgets before going.</li>
     <li>There is absolutely no cellphone signal or WiFi.</li>
     <li>Do not get injured! 911 is going to take a while to get to the island.</li>
     <li>What comes with you, goes with you. All trash must be taken back to the mainland.</li>
     <li>Daytrippers, don't miss the last boat or you will be sleeping among the stars.</li>
   </ol>
-  </main>
-  <footer>    
   <h3>Sources</h3>
     <a href="https://www.alltrails.com/parks/us/california/channel-islands-national-park">AllTrails</a> | <a href="https://islandpackers.com/">Island Packers</a> | <a href="https://www.nature.org/en-us/get-involved/how-to-help/places-we-protect/santa-cruz-island-california/">The Nature Conservancy</a> | <a href="https://www.nps.gov/chis/planyourvisit/santa-cruz-island.htm">NPS</a> | <a href="https://www.tripadvisor.com/Attraction_Review-g143019-d141863-Reviews-Santa_Cruz_Island-Channel_Islands_National_Park_California.html">Trip Advisor</a> | <a href="https://www.visitcalifornia.com/attraction/santa-cruz-island">Visit California</a>
-    </footer>
+       </main>
+     <footer> EB / Cope Camp 2019 </footer>
   </body>
 </html>
